--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,6 @@ jobs:
         with:
           toolchain: stable
           override: true
-          components: llvm-tools-preview
       # Cache Rust
       - uses: Swatinem/rust-cache@v2
         with:
@@ -39,7 +38,7 @@ jobs:
       # Prepare CI with images containers and permissions
       - name: Prepare CI
         run: |
-          sudo apt install -y qemu-kvm qemu-utils pkg-config gcc musl-dev libpq-dev libssl-dev musl-tools libc-dev g++ make
+          sudo apt install -y qemu-utils pkg-config gcc libpq-dev libssl-dev libc-dev g++ make nginx nginx-extras
           wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
           mv ubuntu-22.04-minimal-cloudimg-amd64.img tests/ubuntu-22.04-minimal-cloudimg-amd64.img
           sudo groupadd nanocl
@@ -52,19 +51,19 @@ jobs:
           sudo chown $USER:nanocl -R $HOME/.nanocl_dev
           sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
-          docker pull ghcr.io/next-hat/metrsd:0.3.2
+          docker pull ghcr.io/next-hat/metrsd:0.4.1
+          docker pull ghcr.io/next-hat/nanocl-dev:dev
           docker pull ghcr.io/next-hat/nanocl-get-started:latest
           docker pull ghcr.io/next-hat/nanocl-qemu:8.0.2.0
-          docker buildx build --load --cache-from type=local,src=~/buildx-cache --cache-to type=local,dest=~/buildx-cache -t ndns:dev -f ./bin/ndns/Dockerfile .
-          docker buildx build --load --cache-from type=local,src=~/buildx-cache --cache-to type=local,dest=~/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
           cargo build --no-default-features --features test --bin ncproxy
           cargo build --no-default-features --features test --bin nanocld
           docker compose -f ./tests/docker-compose.yaml up -d
           sleep 4
           sudo chown $USER:nanocl -R /run/nanocl
+          sudo chown $USER:nanocl -R /etc/nginx
           sudo chown $USER:nanocl -R $HOME/.nanocl_dev
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir $HOME/.nanocl_dev/state &
-          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /tmp &
+          cargo run --no-default-features --features test --bin ncproxy -- --state-dir $HOME/.nanocl_dev/state &
           sleep 4
           docker ps -a
           sudo chown -R $USER:nanocl /run/nanocl
