--- a/examples/tcp_example.yml
+++ b/examples/tcp_example.yml
@@ -15,6 +15,11 @@ Resources:
       Target:
         Key: tcp-example.global.c
         Port: 9000
+    - Network: Internal
+      Protocol: Tcp
+      Port: 9001
+      Target:
+        UnixPath: /run/nanocl/proxy.sock
 
 # See all options:
 # https://docs.next-hat.com/references/nanocl/cargo
