--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -72,7 +72,7 @@ jobs:
           ls -la /run/nanocl
       # Run coverage
       - name: Run tests
-        run: cargo make covgen
+        run: cargo make covgenci
       # Upload it to codecov
       - name: Codecov
         uses: codecov/codecov-action@v3.1.1
