--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,11 +24,6 @@ jobs:
         with:
           path: ~/buildx-cache
           key: buildx-cache
-      # Install rust
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
       # Cache Rust
       - uses: Swatinem/rust-cache@v2
         with:
@@ -38,7 +33,6 @@ jobs:
       # Prepare CI with images containers and permissions
       - name: Prepare CI
         run: |
-          sudo apt install -y qemu-utils pkg-config gcc libpq-dev libssl-dev libc-dev g++ make nginx nginx-extras
           wget https://cloud-images.ubuntu.com/minimal/releases/jammy/release/ubuntu-22.04-minimal-cloudimg-amd64.img
           mv ubuntu-22.04-minimal-cloudimg-amd64.img tests/ubuntu-22.04-minimal-cloudimg-amd64.img
           sudo groupadd nanocl
@@ -53,17 +47,14 @@ jobs:
           docker pull cockroachdb/cockroach:v23.1.12
           docker pull ghcr.io/next-hat/metrsd:0.4.1
           docker pull ghcr.io/next-hat/nanocl-dev:dev
-          docker pull ghcr.io/next-hat/nanocl-get-started:latest
           docker pull ghcr.io/next-hat/nanocl-qemu:8.0.2.0
-          cargo build --no-default-features --features test --bin ncproxy
-          cargo build --no-default-features --features test --bin nanocld
+          docker pull ghcr.io/next-hat/nanocl-get-started:latest
           docker compose -f ./tests/docker-compose.yaml up -d
           sleep 4
+          sh scripts/prepare_test_ci.sh
           sudo chown $USER:nanocl -R /run/nanocl
           sudo chown $USER:nanocl -R /etc/nginx
           sudo chown $USER:nanocl -R $HOME/.nanocl_dev
-          cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir $HOME/.nanocl_dev/state &
-          cargo run --no-default-features --features test --bin ncproxy -- --state-dir $HOME/.nanocl_dev/state &
           sleep 4
           docker ps -a
           sudo chown -R $USER:nanocl /run/nanocl
