--- a/bin/ncproxy/src/models/templates/http.conf
+++ b/bin/ncproxy/src/models/templates/http.conf
@@ -1,10 +1,30 @@
 server {
   listen {{ listen }};
+  {% if ssl %}
+  listen {{ listen_https }} http2 ssl;
+
+  if ($scheme != https) {
+      return 301 https://$host$request_uri;
+  }
+  {% endif %}
   {% if domain %}server_name {{ domain }};
 
   if ($host != {{ domain }}) {
     return 502;
   }{% endif %}
+  {% if ssl %}
+  ssl_certificate         {{ssl.Certificate}};
+  ssl_certificate_key     {{ssl.CertificateKey}};
+  {% if ssl.Dhparam %}
+  ssl_dhparam             {{ssl.Dhparam}};
+  {% endif %}
+  {% if ssl.CertificateClient %}
+  ssl_client_certificate  {{ssl.CertificateClient}};
+  {% endif %}
+  {% if ssl.VerifyClient %}
+  ssl_verify_client       on;
+  {% endif %}
+  {% endif %}
   {% for location in locations %}
   location {{ location.path }} {
     {% if location.redirect %}
