--- a/bin/ncproxy/tests/basic.yml
+++ b/bin/ncproxy/tests/basic.yml
@@ -35,6 +35,12 @@ Rules:
 - Protocol: Tcp
   Port: 9999
   Network: global.nsp
+  Target:
+    Key: ncproxy-test.global.c
+    Port: 9000
+- Protocol: Tcp
+  Port: 9988
+  Network: global.nsp
   Ssl: test-secret
   Target:
     Key: ncproxy-test.global.c
