--- a/bin/ncproxy/src/models/templates/nginx.conf
+++ b/bin/ncproxy/src/models/templates/nginx.conf
@@ -6,7 +6,7 @@ pid /run/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-  worker_connections 1024;
+  worker_connections 4096;
   #multi_accept on;
 }
 
@@ -23,7 +23,7 @@ http {
 	server_tokens                 off;
 	tcp_nopush                    on;
 	tcp_nodelay                   on;
-	client_body_temp_path         /tmp/nginx/body 1 2;
+	# client_body_temp_path         /tmp/nginx/body 1 2;
 	keepalive_timeout             90s;
 	proxy_connect_timeout         90s;
 	proxy_send_timeout            90s;
@@ -36,8 +36,8 @@ http {
 	proxy_set_header              X-Forwarded-For $proxy_add_x_forwarded_for;
 	proxy_set_header              Accept-Encoding "";
 	proxy_cache                   off;
-	proxy_cache_path              /var/lib/nginx/cache/public  levels=1:2 keys_zone=public-cache:30m max_size=192m;
-	proxy_cache_path              /var/lib/nginx/cache/private levels=1:2 keys_zone=private-cache:5m max_size=1024m;
+	# proxy_cache_path              /var/lib/nginx/cache/public  levels=1:2 keys_zone=public-cache:30m max_size=192m;
+	# proxy_cache_path              /var/lib/nginx/cache/private levels=1:2 keys_zone=private-cache:5m max_size=1024m;
 
 	# Default upstream scheme
 	map $host $forward_scheme {
@@ -86,9 +86,9 @@ http {
     '"http_user_agent": "$http_user_agent"'
     '}';
 
-  access_log /var/log/nginx/access/http.log http_json;
-  access_log /var/log/nginx/access.log;
-  error_log /var/log/nginx/error.log debug;
+  access_log {{ state_dir }}/log/http.log http_json;
+  access_log {{ state_dir }}/log/access.log;
+  error_log {{ state_dir }}/log/error.log debug;
 
   ## Header config for remove express
   more_set_headers "Server: nanocl";
@@ -118,8 +118,8 @@ http {
   ##
   # Virtual Host Configs
   ##
-  include /etc/nginx/conf.d/*.conf;
-  include /etc/nginx/sites-enabled/*.conf;
+  include {{ state_dir }}/conf.d/*.conf;
+  include {{ state_dir }}/sites-enabled/*.conf;
 }
 
 ##
@@ -148,12 +148,12 @@ stream {
     '$protocol $status $bytes_sent $bytes_received '
     '$session_time';
 
-  access_log /var/log/nginx/access/stream.log stream_json;
-  access_log /var/log/nginx/access.log stream_basic;
-  error_log /var/log/nginx/error.log debug;
+  access_log {{ state_dir }}/log/stream.log stream_json;
+  access_log {{ state_dir }}/log/access.log stream_basic;
+  error_log {{ state_dir }}/log/error.log debug;
 
   ##
   # Virtual Stream Configs
   ##
-  include /etc/nginx/streams-enabled/*;
+  include {{ state_dir }}/streams-enabled/*;
 }
