--- a/bin/ncdns/Cargo.toml
+++ b/bin/ncdns/Cargo.toml
@@ -30,6 +30,7 @@ serde_yaml = "0.9.25"
 
 [dependencies]
 log = "0.4.20"
+liquid = "0.26.1"
 clap = { version = "4.4.11", features = ["derive"] }
 ntex = { version = "0.7.16", features = ["tokio"] }
 tokio = { version = "1.34.0", features = ["fs"] }
