--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/main.rs"
 [features]
 default = []
 dev = ["nanocl_utils/dev"]
-release = ["openssl/vendored"]
+vendored = ["openssl/vendored"]
 test = []
 
 [build-dependencies]
