--- a/bin/nanocl/Dockerfile
+++ b/bin/nanocl/Dockerfile
@@ -54,7 +54,7 @@ COPY .git ./.git
 ENV NANOCL_CHANNEL=$channel
 ENV RUSTFLAGS="-C target-feature=+crt-static"
 RUN export ARCH=$(uname -m) \
-  && cargo build --release --target=$ARCH-unknown-linux-musl --features release --bin nanocl
+  && cargo build --release --target=$ARCH-unknown-linux-musl --features vendored --features release --bin nanocl
 RUN export ARCH=$(uname -m) \
   && upx --lzma --best /app/target/$ARCH-unknown-linux-musl/release/nanocl \
   && cp /app/target/$ARCH-unknown-linux-musl/release/nanocl /bin/nanocl
