--- a/.github/workflows/draft_nightly_nanocl.yml
+++ b/.github/workflows/draft_nightly_nanocl.yml
@@ -21,7 +21,7 @@ jobs:
       # Install required dependencies
       - name: Install dependencies
         run: |
-          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git upx perl build-base dpkg pandoc github-cli
+          apk add --update alpine-sdk musl-dev g++ make libpq-dev openssl-dev git perl build-base dpkg pandoc github-cli
           rustup target add x86_64-unknown-linux-musl
       - uses: actions/checkout@v3
       # Extract branch info
